--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.10.0</version>
 		</dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.5.3</version>
+</dependency>
 		 <dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
